# Log-Analyzer-with-MCP

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  NOTICE  README.md  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: pre-commit.yml
docs/: ai-integration.md  architecture.md  aws-config.md  features.md  troubleshooting.md  usage.md
src/: client.py
src/cw-mcp-server/: aws_credentials_mixin.py  server.py
src/cw-mcp-server/resources/: cloudwatch_logs_resource.py
src/cw-mcp-server/tools/: __init__.py  analysis_tools.py  correlation_tools.py  search_tools.py
src/cw_mcp_server/: server.py
src/cw_mcp_server/resources/: cloudwatch_logs_resource.py
src/cw_mcp_server/tools/: analysis_tools.py  correlation_tools.py  search_tools.py  utils.py
tests/: test_utils.py
